--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,16 @@
             <ul>
         </div>
     </header>
+
+    <div class="contactMe">
+        <h2>Contact Me</h2>
+        <h3>Email Address:</h3>
+        <input id="ea" type="email">
+        <h4>Message:</h4>
+        <input id="message" type="text">
+        <button>Send</button>
+    </div>
+    
     <footer>
         <div></div>
         <p>&copy; Mason Short 2019</p>
