additional design tweaks and links panel

--- a/index.html
+++ b/index.html
@@ -16,17 +16,28 @@
                 <h1>Mason Short</h1>
             </div>
                 <ul class="navButtons">
-                    <li class="button"><a href="contact.html">Contact</a></li>
-                    <li class="button"><a href="portfolio.html">Portfolio</a></li>
-                    <li class="button"><a class="active" href="index.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a  href="portfolio.html">Portfolio</a></li>
+                    <li><a class="active" href="index.html">About</a></li>
                 </ul>
         </div>
     </header>
     
-    <div id="aboutMe" class="clearfix">
-        <h2 id="amHead">About Me</h2>
-        <img id="profileImg" src="./assets/images/masonshort.jpg" alt="Mason Short">
-        <p id="amPara">Hi, my name is Mason Short. Thank you for visiting my page. Here you can find my portfolio, my contact information, and some information about me! <br><br> I have always loved computers and working with my hands. I built my first computer at the age of 12 and instantly found my niche. Ever since then, my career focus has been related to computers, from technical support, to physical hardware, to programming! <br> <br> My hobbies include miniature model painting, 3D printing and design, and flying and racing RC planes and cars. I also have a passion for technology of all kinds and I make it a point to keep myself up to date on the goings-on in the tech world. <br> <br> I have one pet, my cat River, and I love all animals. There's nothing quite like holding an armful of kittens!</p>
+    <div class="body clearfix">
+        <h2>About Me</h2>
+        <div id="am" class="clearfix">
+            <img src="./assets/images/masonshort.jpg" alt="Mason Short">
+            <p>Hi, my name is Mason Short. Thank you for visiting my page. Here you can find my portfolio, my contact information, and some information about me! <br><br> I have always loved computers and working with my hands. I built my first computer at the age of 12 and instantly found my niche. Ever since then, my career focus has been related to computers, from technical support, to physical hardware, to programming! <br> <br> My hobbies include miniature model painting, 3D printing and design, and flying and racing RC planes and cars. I also have a passion for technology of all kinds and I make it a point to keep myself up to date on the goings-on in the tech world. <br> <br> I have one pet, my cat River, and I love all animals. There's nothing quite like holding an armful of kittens!</p>
+        </div>
+        <div class="links">
+            <h2>Links</h2>
+            <ul>
+                <li><a href="https://github.com/LtWilhelm" target="_blank"><img src="./assets/images/GitHub-Mark.png" alt="GitHub:"><p>LtWilhelm</p></a></li>
+                <li><a href=""><img src="./assets/images/LinkedIn.png" alt="LinkedIn:"><p>Mason Short</p></a></li>
+                <li><img src="./assets/images/twitter.png" alt="Twitter:"><a href="https://twitter.com/ursadesignworks"><p>@ursadesignworks</p></a></li>
+                <li><img src="./assets/images/email-icon.png" alt="Contact:"><a href="contact.html"><p>Contact Me</p></a></li>
+            </ul>
+        </div>
     </div>
 
     <footer>
