--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500">
 </head>
 <body>
     <header class="clearfix">
@@ -16,7 +17,7 @@
             </div>
                 <ul class="navButtons">
                     <li class="button"><a href="contact.html">Contact</a></li>
-                    <li class="button"><a class="active" href="portfolio.html">Portfolio</a></li>
+                    <li class="button" id="center"><a class="active" href="portfolio.html">Portfolio</a></li>
                     <li class="button"><a href="index.html">About</a></li>
                 </ul>
         </div>
