--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact Me</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500">
 </head>
 
 <body>
@@ -17,13 +18,13 @@
         </div>
             <ul class="navButtons">
                 <li class="button"><a class="active" href="contact.html">Contact</a></li>
-                <li class="button"><a href="portfolio.html">Portfolio</a></li>
+                <li class="button" id="center"><a href="portfolio.html">Portfolio</a></li>
                 <li class="button"><a href="index.html">About</a></li>
             <ul>
         </div>
     </header>
 
-    <div class="contactMe">
+    <div class="body">
         <h2>Contact Me</h2>
         <h3>Email Address:</h3>
         <input id="ea" type="email">
