--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <title>Contact Me</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500">
+    <link rel="shortcut icon" href="./assets/images/ursalogo.ico" type="image/x-icon">
 </head>
 
 <body>
