--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 <h1>Mason Short</h1>
             </div>
                 <ul class="navButtons">
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a  href="portfolio.html">Portfolio</a></li>
                     <li><a class="active" href="index.html">About</a></li>
+                    <li><a  href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
         </div>
     </header>
@@ -29,48 +29,8 @@
         <div id="am" class="clearfix">
             <img src="./assets/images/masonshort.jpg" alt="Mason Short">
             <p>Hi, my name is Mason Short. Thank you for visiting my page. Here you can find my portfolio, my contact information, and some information about me! <br><br> I have always loved computers and working with my hands. I built my first computer at the age of 12 and instantly found my niche. Ever since then, my career focus has been related to computers, from technical support, to physical hardware, to programming! <br> <br> My hobbies include miniature model painting, 3D printing and design, and flying and racing RC planes and cars. I also have a passion for technology of all kinds and I make it a point to keep myself up to date on the goings-on in the tech world. <br> <br> I have one pet, my cat River, and I love all animals. There's nothing quite like holding an armful of kittens!</p>
-            <!-- <!-- <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam eius vel iure accusantium natus totam ex soluta incidunt eligendi sequi tempora optio nesciunt, id iste laboriosam, qui atque, dolor impedit. -->
-            Recusandae inventore ullam eum dolorem ad distinctio odit aspernatur, fuga maxime rerum corporis dicta excepturi deserunt consequatur praesentium doloremque reprehenderit repudiandae quam sint fugiat officia? Culpa asperiores deserunt saepe debitis?
-            Maiores, dolores debitis magni qui cum nemo porro eligendi totam repudiandae deserunt architecto sequi ratione ducimus minima quia facere. Laborum recusandae minus expedita deserunt a eos velit quibusdam fuga ipsa!
-            Totam adipisci consequatur sunt fugit est ea similique nam reiciendis? Sint dolor vel quibusdam magni molestias accusantium illum, nam, illo aspernatur asperiores perspiciatis ut! Ducimus iure nemo numquam error. Quisquam.
-            Sequi expedita eligendi quaerat similique beatae magni incidunt quidem culpa impedit ea nisi sapiente qui, consequatur, laborum ad! Pariatur dolor corrupti ullam dignissimos exercitationem? Rem iste ut nulla vel tempora!
-            Accusantium, cumque tempore nobis est quisquam neque dolor doloremque sit praesentium architecto voluptatum. Doloremque ratione excepturi quos dolor nemo unde quo dicta odit culpa, dolore ea suscipit quibusdam doloribus labore.
-            Corrupti dignissimos magni fugiat quisquam obcaecati quis, architecto voluptates hic autem, eum, quibusdam cum. Cumque dolorem tempore suscipit inventore, fuga commodi dicta alias doloremque vitae, accusantium consequuntur eveniet voluptate dolore.
-            Illo consequuntur inventore aliquam et architecto, ex minima esse deleniti obcaecati adipisci quas temporibus rerum doloremque in consequatur at debitis eligendi dolor praesentium iusto porro error voluptatum. Suscipit, doloremque ipsam!
-            Error hic provident veniam. Iure placeat molestiae accusantium quibusdam aspernatur, deserunt necessitatibus at quos nihil accusamus architecto atque ea natus quae reiciendis veritatis. Dolore ipsum, culpa ducimus adipisci quos aut!
-            Cupiditate sunt error dolorem aliquam, sint ipsa dignissimos libero nam culpa sit illo consequatur aut sed facilis suscipit non nisi possimus? A delectus sit quo ipsum hic, aliquid cum omnis!
-            Reprehenderit illum fugiat optio maiores perspiciatis ipsa, blanditiis adipisci quo neque omnis in inventore nostrum quidem laboriosam nobis expedita enim recusandae obcaecati repellat explicabo rem voluptates saepe! Odio, id earum.
-            Ratione harum, facilis quae fuga accusamus ea, at quos eos quibusdam quidem pariatur assumenda consectetur vitae, eaque consequuntur quis ab itaque est. Consectetur error cumque aliquam placeat quidem, dolor debitis.
-            Expedita quo necessitatibus quidem ratione obcaecati, magni, debitis quaerat saepe tempore excepturi placeat consequatur quae deserunt iste! Commodi accusamus, dolorum voluptatibus nisi alias aperiam quo. A, eius obcaecati! Animi, corrupti?
-            Tempore eveniet officiis corrupti cum labore excepturi tempora repudiandae doloremque nostrum voluptas sint praesentium provident, temporibus laudantium dolore consequatur? Rem similique placeat, tempore aliquam voluptates at nobis! Placeat, sit. Ipsa!
-            Distinctio, corrupti. Delectus dolore error repellat animi eum perspiciatis ipsum architecto unde quibusdam deleniti dolores, beatae autem iste quidem est aspernatur impedit alias omnis, at rerum nesciunt quia possimus. Quaerat!
-            Est quaerat, minus dolores eveniet maiores dicta corrupti nisi consequatur culpa nemo magni ut et molestiae minima delectus quas. Adipisci nisi at minima. Odit, reprehenderit tempora natus consequuntur veritatis nam?
-            Perferendis libero iusto repellendus beatae eaque saepe! Magnam illum quaerat possimus molestiae fugiat ad sunt cumque distinctio tenetur. Delectus sint sed doloribus minima atque? Quas quo eaque illo quibusdam suscipit!
-            Nostrum sapiente, architecto nobis accusantium eveniet doloremque eum, ipsa ullam pariatur libero quisquam aliquid repudiandae quod in reiciendis distinctio quam tempore sint! Voluptate impedit cumque sit, ipsum laudantium eius necessitatibus.
-            Dicta molestias omnis temporibus. Itaque saepe autem est nesciunt? Aspernatur, nesciunt atque rem eum laborum, similique harum sed ipsam autem sit vitae eligendi libero nobis animi accusamus! Eius, et iste.
-            Obcaecati eum tenetur laborum non odit iure, et cum quam at quia quos! Nemo iure excepturi vero, perferendis repellendus quod quaerat nesciunt amet culpa eum laboriosam enim a quia ullam.
-            Nihil atque reiciendis temporibus, placeat minus perferendis excepturi sequi ipsam dolore perspiciatis voluptas sed ex quidem totam iure ut deleniti odit. Quaerat exercitationem quia officia repudiandae molestias, quidem at enim.
-            Tempore amet, pariatur natus nisi facere quisquam autem magni asperiores fuga. Temporibus minus illum sit recusandae asperiores dicta similique, obcaecati fuga aliquam. Dignissimos illum consequuntur vel distinctio eveniet porro deserunt?
-            Quis molestiae ad, laborum voluptas sed repellat! Animi itaque aut, dignissimos repellat laborum cumque obcaecati praesentium officia quidem, voluptate, quos similique architecto harum officiis tempora! Exercitationem quos tempore ea amet.
-            Sequi aut et distinctio mollitia illum iusto blanditiis in suscipit quod exercitationem at laudantium totam officia, voluptates molestiae? Id non saepe culpa esse vitae reiciendis molestias aspernatur voluptatibus architecto itaque?
-            Beatae, blanditiis perspiciatis ullam harum vero corrupti doloremque inventore, nostrum ad deleniti, est dolore aperiam. Illo, et rerum. Vitae assumenda laborum quis rerum impedit id blanditiis totam iure tenetur ut.
-            Numquam quaerat tenetur adipisci quo, eligendi culpa reprehenderit aperiam beatae inventore tempora veniam iste placeat cumque dolore saepe harum quibusdam. Necessitatibus deserunt voluptate obcaecati quasi at adipisci esse nesciunt sequi.
-            Iusto, amet, beatae quam ab necessitatibus eum veniam facilis, vitae perferendis quo veritatis dicta quas dolor nisi at unde soluta deleniti. Nostrum soluta accusantium odit dolor molestiae hic vel. Molestias!
-            Vitae officia tenetur, rem unde nemo repellendus animi fuga numquam veniam eius? Quisquam et dolor voluptatibus, corrupti eveniet magnam aspernatur a, sit, esse modi porro reprehenderit numquam hic consectetur! Deleniti!
-            Obcaecati nobis aspernatur voluptate blanditiis, doloribus minus asperiores nihil, soluta deleniti itaque possimus beatae perferendis totam odio quidem velit ad unde voluptatibus non praesentium nesciunt ex placeat. Dolores, reiciendis dolore!
-            Tenetur hic quibusdam perferendis harum aliquid ipsa sunt cumque placeat, illo sed nesciunt ut alias officiis dolorem laudantium a deleniti quia maiores eveniet? Voluptate maiores odio quisquam, rerum mollitia repellendus.
-            Mollitia dignissimos id, facilis laudantium dicta corrupti eligendi alias sit, non, atque odio est voluptates soluta fugit totam rerum. Tenetur corporis numquam totam fugiat consectetur ab, deserunt officia ipsa a!
-            Eum eius deleniti mollitia consequatur quisquam expedita quae debitis eveniet labore. Atque a, assumenda quod facere velit quidem tempore at aut quaerat itaque aspernatur ad, quos rem tempora veritatis perspiciatis.
-            Quis ut iste quasi animi iure facere, nostrum id sunt, sit adipisci ducimus, temporibus quos vitae. Maxime nihil autem odit nisi, consectetur magni voluptatum doloribus sint provident exercitationem cupiditate nemo.
-            Est eius provident praesentium vero veritatis ex architecto cum quam dolor sequi sapiente magni recusandae, laboriosam labore inventore quas culpa assumenda autem nisi qui magnam quod saepe quos? Et, ratione.
-            Ad sapiente temporibus quaerat deleniti qui! Odio animi sapiente numquam perspiciatis veritatis voluptates iusto ducimus eaque in. Maiores dolores reiciendis, dolor est ratione esse, reprehenderit dolore eius, doloribus neque repellendus.
-            Excepturi at debitis quisquam ut vel quo amet quas ab molestiae impedit aliquam eveniet est illo libero sequi, nemo in, unde modi fuga velit vitae. Porro repellendus reprehenderit autem! Ducimus!
-            Maiores ex debitis adipisci, vitae a facere alias aperiam at nisi quos dolore illo, est consequuntur sapiente. Aperiam blanditiis commodi aliquam maxime culpa. Repellendus quas esse odio eaque laborum facilis.
-            Beatae, ea quasi voluptas et exercitationem saepe reprehenderit consectetur eaque accusantium assumenda voluptatem voluptatibus amet quod debitis veritatis error aliquam mollitia neque. Rerum eius impedit, perspiciatis esse temporibus laborum magni.
-            Amet aperiam commodi qui velit provident accusantium necessitatibus temporibus laudantium inventore dolor! Omnis expedita vel exercitationem voluptate nulla cumque obcaecati neque ea, adipisci alias impedit sint nisi nemo blanditiis tempora!
-            Magni, quod. Soluta neque quia fugit, itaque repellat nulla ipsam nobis reprehenderit blanditiis veritatis corrupti possimus iusto amet animi illo deleniti earum sapiente aperiam quam aspernatur voluptas beatae tempora voluptatum.</p> -->
         </div>
-        <div class="links">
+        <aside class="links">
             <h2>Links</h2>
             <ul>
                 <li><a href="https://github.com/LtWilhelm" target="_blank"><img src="./assets/images/GitHub-Mark.png" alt="GitHub:"><p>LtWilhelm</p></a></li>
@@ -78,7 +38,7 @@
                 <li><a href="https://twitter.com/ursadesignworks"><img src="./assets/images/twitter.png" alt="Twitter:"><p>@ursadesignworks</p></a></li>
                 <li><a href="contact.html"><img src="./assets/images/email-icon.png" alt="Contact:"><p>Contact Me</p></a></li>
             </ul>
-        </div>
+        </aside>
     </section>
 
     <footer>
