--- a/portfolio.html
+++ b/portfolio.html
@@ -13,16 +13,26 @@
     <header class="clearfix">
         <div class="container">
             <div class="title"> 
-                <!-- If I do an ID here for the title, it still works across all pages that I put the same header on. Should I do this if it's a unique element on each page, or should I keep it as a class? -->
                 <h1>Mason Short</h1>
             </div>
-                <ul class="navButtons">
-                    <li class="button"><a href="contact.html">Contact</a></li>
-                    <li class="button" id="center"><a class="active" href="portfolio.html">Portfolio</a></li>
-                    <li class="button"><a href="index.html">About</a></li>
-                </ul>
+            <ul class="navButtons">
+                <li class="button"><a href="index.html">About</a></li>
+                <li class="button"><a class="active" href="portfolio.html">Portfolio</a></li>
+                <li class="button"><a href="contact.html">Contact</a></li>
+            </ul>
         </div>
     </header>
+
+    <section class="body clearfix">
+        <h2>Portfolio</h2>
+        <div class="portfolio">
+            <a href=""><img src="https://via.placeholder.com/200" alt="placeholder"><div class="overlay">placeholder text 1</div></a>
+            <a href=""><img src="https://via.placeholder.com/200" alt="placeholder"><div class="overlay">placeholder text 2</div></a>
+            <a href=""><img src="https://via.placeholder.com/200" alt="placeholder"><div class="overlay">placeholder text 3</div></a>
+            <a href=""><img src="https://via.placeholder.com/200" alt="placeholder"><div class="overlay">placeholder text 4</div></a>
+            <a href=""><img src="https://via.placeholder.com/200" alt="placeholder"><div class="overlay">placeholder text 5</div></a>
+        </div>
+    </section>
 
     <footer>
         <div></div>
